kubernetes/apps/network/gateway/app/external/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: external
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: external
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    external-dns.alpha.kubernetes.io/target: "external.${SECRET_PUBLIC_DOMAIN}"
  labels:
    "homelab/gateway-type": external
spec:
  gatewayClassName: external
  infrastructure:
    parametersRef:
      group: gateway.envoyproxy.io
      kind: EnvoyProxy
      name: external
  listeners:
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.${SECRET_PUBLIC_DOMAIN}"
      tls:
        mode: Terminate
        certificateRefs:
          - name: external-tls
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              external-gateway-access: "true"
